--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <a class="skip-link" href="#main">Skip to content</a>
     <header class="site-header">
       <div class="container header-inner">
-        <a href="#hero" class="logo">Journey as a Front‑End Developer</a>
+        <a href="#hero" class="logo">Hossam Mahmoud</a>
         <button
           class="nav-toggle"
           aria-label="Toggle navigation"
