--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           aria-controls="main-nav"
           aria-expanded="false"
         >
-          Menu
+          <i class="fa-solid fa-bars"></i>
         </button>
         <nav class="main-nav" id="main-nav">
-          <a href="#about">About</a>
+          <a href="#about">About Us</a>
           <a href="#story">Story</a>
           <a href="#projects">Projects</a>
           <a href="#skills">Skills</a>
@@ -115,7 +115,7 @@
               loading="lazy"
             />
             <div class="about-content">
-              <h2 class="section-title">About</h2>
+              <h2 class="section-title">About Us</h2>
               <p class="about-text">
                 I’m Hossam Mahmoud, a Front-End Developer dedicated to creating
                 fast, smooth, and user-focused web experiences. I enjoy
