--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           aria-controls="main-nav"
           aria-expanded="false"
         >
-          <i class="fa-solid fa-bars"></i>
+         Menu
         </button>
         <nav class="main-nav" id="main-nav">
           <a href="#about">About Us</a>
