--- a/index.html
+++ b/index.html
@@ -8,20 +8,43 @@
       name="description"
       content="Hossam Mahmoud — I turn ideas into beautiful digital experiences. Explore my story, projects, skills, and get in touch."
     />
-    <meta property="og:title" content="Journey as a Front‑End Developer — Hossam Mahmoud" />
-    <meta property="og:description" content="I turn ideas into beautiful digital experiences. Explore my story, projects, skills, and get in touch." />
+    <meta
+      property="og:title"
+      content="Journey as a Front‑End Developer — Hossam Mahmoud"
+    />
+    <meta
+      property="og:description"
+      content="I turn ideas into beautiful digital experiences. Explore my story, projects, skills, and get in touch."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Journey as a Front‑End Developer — Hossam Mahmoud" />
-    <meta name="twitter:description" content="I turn ideas into beautiful digital experiences. Explore my story, projects, skills, and get in touch." />
+    <meta
+      name="twitter:title"
+      content="Journey as a Front‑End Developer — Hossam Mahmoud"
+    />
+    <meta
+      name="twitter:description"
+      content="I turn ideas into beautiful digital experiences. Explore my story, projects, skills, and get in touch."
+    />
     <meta name="twitter:image" content="assets/img/profile.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://opengraph.githubassets.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://opengraph.githubassets.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -67,7 +90,7 @@
           aria-controls="main-nav"
           aria-expanded="false"
         >
-         Menu
+          <i class="fa-solid fa-bars"></i>
         </button>
         <nav class="main-nav" id="main-nav">
           <a href="#about">About Us</a>
@@ -95,7 +118,15 @@
               >
             </div>
             <div class="hero-media">
-              <img src="assets/img/profile.jpg" alt="Hossam Mahmoud portrait" width="420" height="420" decoding="async" loading="eager" fetchpriority="high" />
+              <img
+                src="assets/img/profile.jpg"
+                alt="Hossam Mahmoud portrait"
+                width="420"
+                height="420"
+                decoding="async"
+                loading="eager"
+                fetchpriority="high"
+              />
             </div>
           </div>
         </div>
@@ -160,7 +191,14 @@
               <div class="content">
                 <h3>2020 — Foundations</h3>
                 <p>
-                  Dived deep into HTML, CSS, and JavaScript through <a href="https://elzero.org/" target="_blank" rel="noopener" class="ext ext--elzero">Elzero Web School Academy</a>; built small tools and landing pages.
+                  Dived deep into HTML, CSS, and JavaScript through
+                  <a
+                    href="https://elzero.org/"
+                    target="_blank"
+                    rel="noopener"
+                    class="ext ext--elzero"
+                    >Elzero Web School Academy</a
+                  >; built small tools and landing pages.
                 </p>
               </div>
             </li>
@@ -292,30 +330,116 @@
               from you.
             </p>
             <div class="socials">
-              <a href="https://github.com/Hossam-Mahmoud293" aria-label="GitHub" title="GitHub" class="social social--github" target="_blank" rel="noopener">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.41c.58.11.79-.25.79-.56v-2.17c-3.22.7-3.9-1.4-3.9-1.4-.53-1.33-1.3-1.68-1.3-1.68-1.06-.72.08-.7.08-.7 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.74-1.56-2.57-.29-5.28-1.29-5.28-5.74 0-1.27.46-2.31 1.2-3.12-.12-.29-.52-1.45.11-3.02 0 0 .98-.31 3.21 1.19a11.18 11.18 0 0 1 5.84 0c2.23-1.5 3.21-1.19 3.21-1.19.63 1.57.23 2.73.11 3.02.75.81 1.2 1.85 1.2 3.12 0 4.46-2.72 5.44-5.31 5.73.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"/></svg>
+              <a
+                href="https://github.com/Hossam-Mahmoud293"
+                aria-label="GitHub"
+                title="GitHub"
+                class="social social--github"
+                target="_blank"
+                rel="noopener"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  aria-hidden="true"
+                  focusable="false"
+                >
+                  <path
+                    d="M12 .5a11.5 11.5 0 0 0-3.64 22.41c.58.11.79-.25.79-.56v-2.17c-3.22.7-3.9-1.4-3.9-1.4-.53-1.33-1.3-1.68-1.3-1.68-1.06-.72.08-.7.08-.7 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.76.41-1.27.74-1.56-2.57-.29-5.28-1.29-5.28-5.74 0-1.27.46-2.31 1.2-3.12-.12-.29-.52-1.45.11-3.02 0 0 .98-.31 3.21 1.19a11.18 11.18 0 0 1 5.84 0c2.23-1.5 3.21-1.19 3.21-1.19.63 1.57.23 2.73.11 3.02.75.81 1.2 1.85 1.2 3.12 0 4.46-2.72 5.44-5.31 5.73.42.36.8 1.07.8 2.16v3.2c0 .31.21.68.8.56A11.5 11.5 0 0 0 12 .5Z"
+                  />
+                </svg>
                 <span class="sr-only">GitHub</span>
               </a>
-              <a href="https://www.linkedin.com/in/hossam-mahmoud-khamis32/" aria-label="LinkedIn" title="LinkedIn" class="social social--linkedin" target="_blank" rel="noopener">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M20.45 20.45h-3.56v-5.57c0-1.33-.02-3.04-1.85-3.04-1.85 0-2.13 1.45-2.13 2.95v5.66H9.35V9.5h3.42v1.49h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.54v5.77zM5.34 8.01a2.07 2.07 0 1 1 0-4.14 2.07 2.07 0 0 1 0 4.14zM7.12 20.45H3.57V9.5h3.55v10.95z"/></svg>
+              <a
+                href="https://www.linkedin.com/in/hossam-mahmoud-khamis32/"
+                aria-label="LinkedIn"
+                title="LinkedIn"
+                class="social social--linkedin"
+                target="_blank"
+                rel="noopener"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  aria-hidden="true"
+                  focusable="false"
+                >
+                  <path
+                    d="M20.45 20.45h-3.56v-5.57c0-1.33-.02-3.04-1.85-3.04-1.85 0-2.13 1.45-2.13 2.95v5.66H9.35V9.5h3.42v1.49h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.54v5.77zM5.34 8.01a2.07 2.07 0 1 1 0-4.14 2.07 2.07 0 0 1 0 4.14zM7.12 20.45H3.57V9.5h3.55v10.95z"
+                  />
+                </svg>
                 <span class="sr-only">LinkedIn</span>
               </a>
-              <a href="https://x.com/HossamMKhamis1" aria-label="X" title="X" class="social social--x" target="_blank" rel="noopener">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M18.244 2H21l-6.44 7.36L22.5 22h-6.9l-4.53-6.04L5.7 22H3l6.88-7.86L1.5 2h7.02l4.08 5.5L18.244 2Zm-2.418 18h2.02L8.28 4h-2.1l9.645 16Z"/></svg>
+              <a
+                href="https://x.com/HossamMKhamis1"
+                aria-label="X"
+                title="X"
+                class="social social--x"
+                target="_blank"
+                rel="noopener"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  aria-hidden="true"
+                  focusable="false"
+                >
+                  <path
+                    d="M18.244 2H21l-6.44 7.36L22.5 22h-6.9l-4.53-6.04L5.7 22H3l6.88-7.86L1.5 2h7.02l4.08 5.5L18.244 2Zm-2.418 18h2.02L8.28 4h-2.1l9.645 16Z"
+                  />
+                </svg>
                 <span class="sr-only">X</span>
               </a>
-              <a href="https://www.youtube.com/@hossammahmoud7786" aria-label="YouTube" title="YouTube" class="social social--youtube" target="_blank" rel="noopener">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M23.5 7.2s-.23-1.63-.95-2.35c-.9-.95-1.9-.96-2.36-1.02C16.96 3.5 12 3.5 12 3.5h-.01s-4.96 0-8.17.33c-.46.06-1.46.07-2.36 1.02C.73 5.57.5 7.2.5 7.2S.27 9.17.27 11.13v1.74c0 1.97.23 3.94.23 3.94s.23 1.63.95 2.35c.9.95 2.08.92 2.61 1.02 1.9.18 8 .33 8 .33s4.96 0 8.17-.33c.46-.06 1.46-.07 2.36-1.02.72-.72.95-2.35.95-2.35s.23-1.97.23-3.94v-1.74c0-1.96-.23-3.93-.23-3.93ZM9.75 14.5v-6l6 3-6 3Z"/></svg>
+              <a
+                href="https://www.youtube.com/@hossammahmoud7786"
+                aria-label="YouTube"
+                title="YouTube"
+                class="social social--youtube"
+                target="_blank"
+                rel="noopener"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  aria-hidden="true"
+                  focusable="false"
+                >
+                  <path
+                    d="M23.5 7.2s-.23-1.63-.95-2.35c-.9-.95-1.9-.96-2.36-1.02C16.96 3.5 12 3.5 12 3.5h-.01s-4.96 0-8.17.33c-.46.06-1.46.07-2.36 1.02C.73 5.57.5 7.2.5 7.2S.27 9.17.27 11.13v1.74c0 1.97.23 3.94.23 3.94s.23 1.63.95 2.35c.9.95 2.08.92 2.61 1.02 1.9.18 8 .33 8 .33s4.96 0 8.17-.33c.46-.06 1.46-.07 2.36-1.02.72-.72.95-2.35.95-2.35s.23-1.97.23-3.94v-1.74c0-1.96-.23-3.93-.23-3.93ZM9.75 14.5v-6l6 3-6 3Z"
+                  />
+                </svg>
                 <span class="sr-only">YouTube</span>
               </a>
             </div>
           </div>
           <form class="form" aria-label="Contact form">
             <div class="form-field">
-              <input type="text" name="name" autocomplete="name" placeholder="Full name" aria-label="Name" required />
+              <input
+                type="text"
+                name="name"
+                autocomplete="name"
+                placeholder="Full name"
+                aria-label="Name"
+                required
+              />
             </div>
             <div class="form-field">
-              <input type="email" name="email" autocomplete="email" placeholder="Email address" aria-label="Email" required />
+              <input
+                type="email"
+                name="email"
+                autocomplete="email"
+                placeholder="Email address"
+                aria-label="Email"
+                required
+              />
             </div>
             <div class="form-field">
               <textarea
@@ -356,7 +480,16 @@
       </div>
     </footer>
     <button id="back-to-top" class="back-to-top" aria-label="Back to top">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false"><path d="M12 5.5l7 7-1.4 1.4L13 9.3V20h-2V9.3L6.4 13.9 5 12.5l7-7z"/></svg>
+      <svg
+        width="18"
+        height="18"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        aria-hidden="true"
+        focusable="false"
+      >
+        <path d="M12 5.5l7 7-1.4 1.4L13 9.3V20h-2V9.3L6.4 13.9 5 12.5l7-7z" />
+      </svg>
     </button>
   </body>
 </html>
